# anki-bundle-extras

./: build_wheels.sh  hatch_build.py  pyproject.toml
linux-amd64/: .gitignore  Dockerfile
linux/amd64/: build.sh  entrypoint.sh
mac/: entitlements.qtwebengineprocess.xml  prepare-audio.sh  prepare-qt.py  prepare-qt5.sh  prepare-qt6.sh
mac/amd64/: README.audio
mac/arm64/: README.audio  copy-audio.sh  mpv.rb
win/: README.audio  prepare-audio.sh  prepare-nsis.sh
